chore: rename app display name from horosho to Сойдёт

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "horosho",
+    "name": "Сойдёт",
     "slug": "horosho",
     "version": "1.0.0",
     "orientation": "portrait",
