config: update splash screen dimensions and background color to match branding

--- a/app.json
+++ b/app.json
@@ -33,9 +33,10 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "imageWidth": 240,
+          "imageHeight": 240,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#ff6b6b"
         }
       ]
     ],
