style: update background color from red to dark blue in app config

--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
           "imageWidth": 240,
           "imageHeight": 240,
           "resizeMode": "contain",
-          "backgroundColor": "#ff6b6b"
+          "backgroundColor": "#2d2d4a"
         }
       ]
     ],
