--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-asset": "~11.1.7",
+    "expo-file-system": "~18.1.11",
+    "expo-print": "~14.1.4",
     "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.3",
     "expo-sharing": "~13.1.5",
