--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "app.mitenka.sojdet"
     },
     "web": {
       "bundler": "metro",
